--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
           "options": {
             "outputPath": "www",
             "index": "src/index.html",
+            "preserveSymlinks": true,
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
@@ -32,6 +33,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               {
                 "input": "src/theme/variables.scss",
                 "inject": true
@@ -116,6 +118,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               {
                 "input": "src/theme/variables.scss",
                 "inject": true
