--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0",
-    "@angular/forms": "^13.3.0",
-    "@angular/platform-browser": "^13.3.0",
-    "@angular/platform-browser-dynamic": "^13.3.0",
-    "@angular/router": "^13.3.0",
-    "@angular/service-worker": "^13.3.0",
+    "@angular/animations": "^14.0.5",
+    "@angular/cdk": "^14.0.4",
+    "@angular/common": "^14.0.5",
+    "@angular/core": "^14.0.5",
+    "@angular/forms": "^14.0.5",
+    "@angular/material": "^14.0.4",
+    "@angular/platform-browser": "^14.0.5",
+    "@angular/platform-browser-dynamic": "^14.0.5",
+    "@angular/router": "^14.0.5",
+    "@angular/service-worker": "^14.0.5",
     "@capacitor/android": "3.4.3",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
@@ -34,22 +37,34 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/splash-screen": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@fortawesome/fontawesome-free": "5.15.3",
     "@ionic-native/core": "5.36.0",
     "@ionic-native/in-app-browser": "5.36.0",
     "@ionic/angular": "6.0.13",
     "@ionic/storage": "^2.1.3",
+    "@popperjs/core": "2.9.1",
+    "@tailwindcss/forms": "0.2.1",
+    "chart.js": "2.9.4",
     "cordova-plugin-inappbrowser": "5.0.0",
     "core-js": "^3.6.4",
-    "rxjs": "^6.5.4",
+    "rxjs": "~7.5.5",
     "sw-toolbox": "3.6.0",
     "swiper": "8.0.7",
+    "tailwindcss": "2.0.4",
     "tslib": "^2.0.0",
     "webdriver-manager": "^12.1.8",
+    "socket.io-client": "^4.3.2",
+    "howler": "^2.2.3",
+    "marked": "^4.0.14",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^14.0.5",
+    "@angular/cli": "^14.0.5",
+    "@angular/compiler": "^14.0.5",
+    "@angular/compiler-cli": "^14.0.5",
+    "@angular/language-service": "^14.0.5",
     "@angular-devkit/architect": "^0.1303.0",
-    "@angular-devkit/build-angular": "~13.3.0",
     "@angular-devkit/core": "^13.3.0",
     "@angular-devkit/schematics": "^13.3.0",
     "@angular-eslint/builder": "13.1.0",
@@ -57,10 +72,6 @@
     "@angular-eslint/eslint-plugin-template": "13.1.0",
     "@angular-eslint/schematics": "13.1.0",
     "@angular-eslint/template-parser": "13.1.0",
-    "@angular/cli": "^13.3.0",
-    "@angular/compiler": "^13.3.0",
-    "@angular/compiler-cli": "^13.3.0",
-    "@angular/language-service": "^13.3.0",
     "@capacitor/cli": "3.4.3",
     "@ionic/angular-toolkit": "6.1.0",
     "@ionic/cli": "6.19.0",
@@ -79,10 +90,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "puppeteer": "^11.0.0",
     "protractor": "~7.0.0",
+    "puppeteer": "^11.0.0",
     "ts-node": "8.5.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.6.4"
   }
 }
