--- a/angular.json
+++ b/angular.json
@@ -177,7 +177,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "defaultCollection": "@angular-eslint/schematics",
+    "analytics": false
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
