--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "socket.io-client": "^4.3.2",
     "howler": "^2.2.3",
     "marked": "^4.0.14",
+    "google-libphonenumber": "^3.2.27",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -81,6 +82,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "@types/google-libphonenumber": "^7.4.23",
     "cordova-res": "0.15.4",
     "eslint": "^8.1.0",
     "jasmine-core": "~3.6.0",
