--- a/package.json
+++ b/package.json
@@ -47,25 +47,22 @@
     "chart.js": "2.9.4",
     "cordova-plugin-inappbrowser": "5.0.0",
     "core-js": "^3.6.4",
+    "google-libphonenumber": "^3.2.27",
+    "howler": "^2.2.3",
+    "marked": "^4.0.14",
+    "ng2-pdf-viewer": "^9.1.4",
     "rxjs": "~7.5.5",
+    "socket.io-client": "^4.3.2",
     "sw-toolbox": "3.6.0",
     "swiper": "8.0.7",
     "tailwindcss": "2.0.4",
     "tslib": "^2.0.0",
     "webdriver-manager": "^12.1.8",
-    "socket.io-client": "^4.3.2",
-    "howler": "^2.2.3",
-    "marked": "^4.0.14",
-    "google-libphonenumber": "^3.2.27",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.5",
-    "@angular/cli": "^14.0.5",
-    "@angular/compiler": "^14.0.5",
-    "@angular/compiler-cli": "^14.0.5",
-    "@angular/language-service": "^14.0.5",
     "@angular-devkit/architect": "^0.1303.0",
+    "@angular-devkit/build-angular": "^14.0.5",
     "@angular-devkit/core": "^13.3.0",
     "@angular-devkit/schematics": "^13.3.0",
     "@angular-eslint/builder": "13.1.0",
@@ -73,16 +70,20 @@
     "@angular-eslint/eslint-plugin-template": "13.1.0",
     "@angular-eslint/schematics": "13.1.0",
     "@angular-eslint/template-parser": "13.1.0",
+    "@angular/cli": "^14.0.5",
+    "@angular/compiler": "^14.0.5",
+    "@angular/compiler-cli": "^14.0.5",
+    "@angular/language-service": "^14.0.5",
     "@capacitor/cli": "3.4.3",
     "@ionic/angular-toolkit": "6.1.0",
     "@ionic/cli": "6.19.0",
     "@ionic/lab": "^2.0.19",
+    "@types/google-libphonenumber": "^7.4.23",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "@types/google-libphonenumber": "^7.4.23",
     "cordova-res": "0.15.4",
     "eslint": "^8.1.0",
     "jasmine-core": "~3.6.0",
