--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "puppeteer": "^11.0.0",
     "ts-node": "8.5.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "~4.6.4",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^34.0.0"
   }
 }
