--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "skipLibCheck": true,
     "lib": [
       "es2018",
@@ -19,23 +19,56 @@
     ],
     "baseUrl": "./",
     "paths": {
-        "@noah-ark/common": ["src/libs/noah-ark/common/src/index.ts"],
-        "@noah-ark/event-bus": ["src/libs/noah-ark/event-bus/src/index.ts"],
-        "@noah-ark/expression-engine": ["src/libs/noah-ark/expression-engine/src/index.ts"],
-        "@noah-ark/json-patch": ["src/libs/noah-ark/json-patch/src/index.ts"],
-        "@noah-ark/path-matcher": ["src/libs/noah-ark/path-matcher/src/index.ts"],
-        "@upupa/data": ["src/libs/upupa/data/src/index.ts"],
-        "@upupa/auth": ["src/libs/upupa/auth/src/index.ts"],
-        "@upupa/common": ["src/libs/upupa/common/src/index.ts"],
-        "@upupa/language": ["src/libs/upupa/language/src/index.ts"],
-        "@upupa/upload": ["src/libs/upupa/upload/src/index.ts"],
-        "@upupa/table": ["src/libs/upupa/table/src/index.ts"],
-        "@upupa/membership": ["src/libs/upupa/membership/src/index.ts"],
-        "@upupa/dynamic-form": ["src/libs/upupa/dynamic-form/src/index.ts"],
-        "@upupa/dynamic-form-material-theme": ["src/libs/upupa/dynamic-form-material-theme/src/index.ts"],
-        "@upupa/dynamic-form-native-theme": ["src/libs/upupa/dynamic-form-native-theme/src/index.ts"],
-        "@upupa/html-editor": ["src/libs/upupa/html-editor/src/index.ts"]
-    }
+      "@noah-ark/common": [
+        "src/libs/noah-ark/common/src/index.ts"
+      ],
+      "@noah-ark/event-bus": [
+        "src/libs/noah-ark/event-bus/src/index.ts"
+      ],
+      "@noah-ark/expression-engine": [
+        "src/libs/noah-ark/expression-engine/src/index.ts"
+      ],
+      "@noah-ark/json-patch": [
+        "src/libs/noah-ark/json-patch/src/index.ts"
+      ],
+      "@noah-ark/path-matcher": [
+        "src/libs/noah-ark/path-matcher/src/index.ts"
+      ],
+      "@upupa/data": [
+        "src/libs/upupa/data/src/index.ts"
+      ],
+      "@upupa/auth": [
+        "src/libs/upupa/auth/src/index.ts"
+      ],
+      "@upupa/common": [
+        "src/libs/upupa/common/src/index.ts"
+      ],
+      "@upupa/language": [
+        "src/libs/upupa/language/src/index.ts"
+      ],
+      "@upupa/upload": [
+        "src/libs/upupa/upload/src/index.ts"
+      ],
+      "@upupa/table": [
+        "src/libs/upupa/table/src/index.ts"
+      ],
+      "@upupa/membership": [
+        "src/libs/upupa/membership/src/index.ts"
+      ],
+      "@upupa/dynamic-form": [
+        "src/libs/upupa/dynamic-form/src/index.ts"
+      ],
+      "@upupa/dynamic-form-material-theme": [
+        "src/libs/upupa/dynamic-form-material-theme/src/index.ts"
+      ],
+      "@upupa/dynamic-form-native-theme": [
+        "src/libs/upupa/dynamic-form-native-theme/src/index.ts"
+      ],
+      "@upupa/html-editor": [
+        "src/libs/upupa/html-editor/src/index.ts"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
