--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.4.3",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/push-notifications": "^4.1.2",
     "@capacitor/splash-screen": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@fortawesome/fontawesome-free": "5.15.3",
@@ -75,6 +76,8 @@
     "@angular/compiler-cli": "^15.2.0",
     "@angular/language-service": "^15.2.0",
     "@capacitor/cli": "3.4.3",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^34.0.0",
     "@ionic/angular-toolkit": "6.1.0",
     "@ionic/cli": "6.19.0",
     "@ionic/lab": "^2.0.19",
@@ -97,8 +100,6 @@
     "puppeteer": "^11.0.0",
     "ts-node": "8.5.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5",
-    "@ckeditor/ckeditor5-angular": "^4.0.0",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^34.0.0"
+    "typescript": "~4.9.5"
   }
 }
