--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/google-maps": "^15.2.1",
     "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
