--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwindcss": "2.0.4",
     "tslib": "^2.0.0",
     "webdriver-manager": "^12.1.8",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
